# glspiral

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
